--- a/src/app/components/annessi/annessi-form/annessi-form.component.css
+++ b/src/app/components/annessi/annessi-form/annessi-form.component.css
@@ -1,6 +1,6 @@
 :host {
-  width: 100vw;
-  height: 100vh;
+  /*width: 100vw;*/
+  /*height: 100vh;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -9,9 +9,7 @@
 }
 
 form {
-  width: 100%;
-  max-width: 400px;
-  margin: auto;
+margin-top: 2em;
   padding: 1em;
   border: 1px solid #ccc;
   border-radius: 1em;
