--- a/src/app/components/annessi/annessi-update-form/annessi-update-form.component.css
+++ b/src/app/components/annessi/annessi-update-form/annessi-update-form.component.css
@@ -8,34 +8,54 @@
 
 }
 
+/*dialog {*/
+/*  position: fixed;*/
+/*  top: 20%;*/
+/*  left: 0;*/
+/*  border: 1px solid #ccc;*/
+/*  padding: 1rem;*/
+/*  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
+/*  background-color: white;*/
+/*  z-index: 1000;*/
+/*  display: none;*/
+/*  border-radius: 5px;*/
+/*  opacity: 0; !* Inizialmente nascosto *!*/
+/*  transform: scale(0.7); !* Inizialmente ridotto *!*/
+/*  transition: opacity 0.5s ease, transform 0.5s ease; !* Durata della transizione *!*/
+/*}*/
+
+/*dialog[open] {*/
+/*  display: block;*/
+/*  opacity: 1; !* Visibile quando aperto *!*/
+/*  transform: scale(1); !* Dimensione normale quando aperto *!*/
+/*  transition: opacity 0.5s ease, transform 0.5s ease; !* Durata della transizione *!*/
+/*}*/
 dialog {
-  position: fixed;
-  top: 20%;
+  width: 90%; /* Aumenta la larghezza del dialog */
+  max-width: 600px; /* Impedisce che diventi troppo largo sui desktop */
+  height: 90vh;
+  top: 5%;
   left: 0;
-  border: 1px solid #ccc;
+
   padding: 1rem;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+
   background-color: white;
-  z-index: 1000;
-  display: none;
   border-radius: 5px;
-  opacity: 0; /* Inizialmente nascosto */
-  transform: scale(0.7); /* Inizialmente ridotto */
-  transition: opacity 0.5s ease, transform 0.5s ease; /* Durata della transizione */
+  opacity: 0;
+  transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 dialog[open] {
   display: block;
-  opacity: 1; /* Visibile quando aperto */
-  transform: scale(1); /* Dimensione normale quando aperto */
-  transition: opacity 0.5s ease, transform 0.5s ease; /* Durata della transizione */
+  opacity: 1;
+  overflow: auto;
 }
 
 
 form {
-  width: 100%;
-  max-width: 400px;
-  margin: auto;
+  /*width: 100%;*/
+  /*max-width: 400px;*/
+  /*margin: auto;*/
   padding: 1em;
   border: 1px solid #ccc;
   border-radius: 1em;
