--- a/src/app/components/annessi/annesso-dialog/annesso-dialog.component.css
+++ b/src/app/components/annessi/annesso-dialog/annesso-dialog.component.css
@@ -1,4 +1,5 @@
 dialog {
+  height: fit-content;
   border: none;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -6,6 +7,7 @@ dialog {
   opacity: 0; /* Inizialmente nascosto */
   transform: scale(0.7); /* Inizialmente ridotto */
   transition: opacity 0.5s ease, transform 0.5s ease; /* Durata della transizione */
+  overflow:auto;
 }
 
 dialog[open] {
