--- a/src/app/components/immobli/immobili-form/immobili-form.component.css
+++ b/src/app/components/immobli/immobili-form/immobili-form.component.css
@@ -9,9 +9,7 @@
 }
 
 form {
-  width: 700px;
-
-  margin: auto;
+  margin-top: 2em;
   padding: 1em;
   border: 1px solid #ccc;
   border-radius: 1em;
