--- a/src/app/components/immobli/immobiliTable/immobili.component.css
+++ b/src/app/components/immobli/immobiliTable/immobili.component.css
@@ -2,13 +2,21 @@ tr:hover {
   transform: scale(1.01);
 
 }
-tr{
+
+tr {
   transition-duration: 0.4s;
 }
-input{
-  padding:10px;
+
+input {
+  padding: 10px;
   border-radius: 4px;
   border: 1px solid gray;
   background-color: white;
 }
 
+.mobile-class{
+  font-size: 14px;
+}
+.desktop-class{
+  font-size: 16px;
+}
