--- a/src/app/components/immobli/immobiliTable/immobili.component.html
+++ b/src/app/components/immobli/immobiliTable/immobili.component.html
@@ -1,93 +1,104 @@
-<div class="row justify-content-between flex-row px-3 ">
-  <div class="col-6 align-content-end ps-3">
-    <input type="text"  [formControl]="searchInput" placeholder="Enter keyword" />
-  </div>
+<div class="container-fluid d-flex justify-content-center align-items-center ">
+  <div class="row w-100">
+    <div class="col-11 mx-auto  ">
+      <div class="row justify-content-between flex-row px-3 ">
+        <div class="col-6 align-content-end ps-3">
+          <input type="text" [formControl]="searchInput" placeholder="Enter keyword"/>
+        </div>
 
 
-  <div class="col-6 d-flex justify-content-end align-content-end pe-3 ">
-    <button class="btn btn-success ms-5 mt-5" routerLink="/immobiliForm"><i class="fa-solid fa-plus"></i></button>
-  </div>
-</div>
-<div *ngIf="errorMessage">
-  <p class="error">{{ errorMessage }}</p>
-</div>
-<div class="d-flex justify-content-center align-items-center flex-direction-column">
-  <table class="table table-bordered  table-hover m-3">
-    <thead>
-    <tr>
-      <th scope="col">azioni</th>
-      <th scope="col">tipo</th>
-      <th scope="col">vani</th>
-      <th scope="col">costo</th>
-      <th scope="col">superficie</th>
-      <th scope="col">anno</th>
-      <th scope="col">proprietario</th>
-      <th scope="col">tot annessi</th>
-
-    </tr>
-    </thead>
-    <tbody>
-    <tr *ngFor="let immobile of listaImmobili! | paginate: { itemsPerPage: 10, currentPage: currentPage }">
-      <th scope="row" class="d-flex justify-content-evenly">
-        <button class=" btn btn-dark" (click)="openDialogUpdate(immobile)"><i
-          class="fa-solid fa-pen-nib shadow" style="color:  #fff000;"></i></button>
-        <button class=" btn btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"
-                (click)="selectDeleteImmobile(immobile)"><i class="fa-solid fa-trash" style="color: #FF0000;"></i></button>
-
-
-      </th>
-      <td>{{ immobile.tipo }}</td>
-      <td>{{ immobile.vani }}</td>
-      <td>{{ immobile.costo | currency:'EUR' }}</td>
-      <td>{{ immobile.superfice | squareMeter }}</td>
-      <td>{{ immobile.anno }}</td>
-      <td
-        (click)="openDialogProp(immobile.proprietariDTO)">{{ immobile.proprietariDTO ? immobile.proprietariDTO.nome + ' ' + immobile.proprietariDTO.cognome : 'ND' }}
-      </td>
-      <td (click)="openDialogAnnessi( immobile.listaAnnessiDTO)">{{ immobile.listaAnnessiDTO.length }}</td>
-
-    </tr>
-    <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
-    </tbody>
-  </table>
-</div>
-<!--modaledi conferma delete-->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <div class="col-6 d-flex justify-content-end align-content-end pe-3 ">
+          <button class="btn btn-success  ms-5 mt-5" routerLink="/immobiliForm"><i class="fa-solid fa-plus"></i>
+          </button>
+        </div>
       </div>
-      <div class="modal-body text-dark">
-        Confermi di voler eliminare l' immobile?
-        <ul>
-          <p class="m-0 mt-3"><small>tipo</small></p>
-          <li>{{ immobileDeleted?.tipo }}</li>
-          <p class="m-0 mt-3"><small>vani</small></p>
-          <li>{{ immobileDeleted?.vani }}</li>
-          <p class="m-0 mt-3"><small>costo</small></p>
-          <li>{{ immobileDeleted?.costo|currency:'EUR' }}</li>
-          <p class="m-0 mt-3"><small>superficie</small></p>
-          <li>{{ immobileDeleted?.superfice ? immobileDeleted!.superfice : 0 | squareMeter }}</li>
-          <p class="m-0 mt-3"><small>anno costruzione</small></p>
-          <li>{{ immobileDeleted?.anno }}</li>
-        </ul>
+      <div *ngIf="errorMessage">
+        <p class="error">{{ errorMessage }}</p>
+      </div>
+      <div [ngClass]="{
+  'd-flex justify-content-center align-items-center flex-column': !isMobile,
+  'table-responsive': isMobile,
+  'mobile-class': isMobile,
+  'desktop-class': !isMobile
+}">
+        <table class="table table-bordered  table-hover m-3">
+          <thead>
+          <tr>
+            <th scope="col">azioni</th>
+            <th scope="col">tipo</th>
+            <th scope="col">vani</th>
+            <th scope="col">costo</th>
+            <th scope="col">superficie</th>
+            <th scope="col">anno</th>
+            <th scope="col">proprietario</th>
+            <th scope="col">tot annessi</th>
 
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let immobile of listaImmobili! | paginate: { itemsPerPage: 10, currentPage: currentPage }">
+            <th scope="row" class="d-flex justify-content-evenly">
+              <button class=" btn btn-sm btn-dark" (click)="openDialogUpdate(immobile)"><i
+                class="fa-solid fa-pen-nib shadow" style="color:  #fff000;"></i></button>
+              <button class=" btn btn-sm btn-dark" data-bs-toggle="modal" data-bs-target="#exampleModal"
+                      (click)="selectDeleteImmobile(immobile)"><i class="fa-solid fa-trash" style="color: #FF0000;"></i>
+              </button>
+
+
+            </th>
+            <td>{{ immobile.tipo }}</td>
+            <td>{{ immobile.vani }}</td>
+            <td>{{ immobile.costo | currency:'EUR' }}</td>
+            <td>{{ immobile.superfice | squareMeter }}</td>
+            <td>{{ immobile.anno }}</td>
+            <td
+              (click)="openDialogProp(immobile.proprietariDTO)">{{ immobile.proprietariDTO ? immobile.proprietariDTO.nome + ' ' + immobile.proprietariDTO.cognome : 'ND' }}
+            </td>
+            <td (click)="openDialogAnnessi( immobile.listaAnnessiDTO)">{{ immobile.listaAnnessiDTO.length }}</td>
+
+          </tr>
+          <pagination-controls (pageChange)="currentPage = $event"></pagination-controls>
+          </tbody>
+        </table>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
-        <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
-                (click)="deleteimmobile(immobileDeleted!.id!)">Elimina
-        </button>
+      <!--modaledi conferma delete-->
+      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body text-dark">
+              Confermi di voler eliminare l' immobile?
+              <ul>
+                <p class="m-0 mt-3"><small>tipo</small></p>
+                <li>{{ immobileDeleted?.tipo }}</li>
+                <p class="m-0 mt-3"><small>vani</small></p>
+                <li>{{ immobileDeleted?.vani }}</li>
+                <p class="m-0 mt-3"><small>costo</small></p>
+                <li>{{ immobileDeleted?.costo|currency:'EUR' }}</li>
+                <p class="m-0 mt-3"><small>superficie</small></p>
+                <li>{{ immobileDeleted?.superfice ? immobileDeleted!.superfice : 0 | squareMeter }}</li>
+                <p class="m-0 mt-3"><small>anno costruzione</small></p>
+                <li>{{ immobileDeleted?.anno }}</li>
+              </ul>
+
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annulla</button>
+              <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
+                      (click)="deleteimmobile(immobileDeleted!.id!)">Elimina
+              </button>
+            </div>
+          </div>
+        </div>
       </div>
+
+      <app-proprietario-dialog></app-proprietario-dialog>
+      <app-annesso-dialog></app-annesso-dialog>
+      <app-immobile-update-form [immobile]="selectedImmobile"></app-immobile-update-form>
+
     </div>
   </div>
 </div>
-
-<app-proprietario-dialog></app-proprietario-dialog>
-<app-annesso-dialog></app-annesso-dialog>
-<app-immobile-update-form [immobile]="selectedImmobile"></app-immobile-update-form>
-
-
-
