--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -21,11 +21,12 @@
 <!--  </div>-->
 <!--</nav>-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark d-flex justify-content-around align-items-center">
-  <div class="navbar-brand logo" routerLink="/"></div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+  <div class="navbar-brand logo mt-2" routerLink="/home"></div>
+  <button class="navbar-toggler" type="button" (click)="isNavbarCollapsed = !isNavbarCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse" id="navbarNav">
+
+  <div class="collapse navbar-collapse" [ngClass]="{'show': isNavbarCollapsed}">
     <ul class="navbar-nav d-flex justify-content-evenly align-items-center w-100">
       <li class="nav-item">
         <a class="nav-link" routerLink="/home" routerLinkActive="active">Home</a>
