--- a/src/app/components/proprietari/proprietari-form/proprietari-form.component.css
+++ b/src/app/components/proprietari/proprietari-form/proprietari-form.component.css
@@ -8,9 +8,7 @@
 
  }
  form {
-   width: 700px;
-
-   margin: auto;
+margin-top: 2em;
    padding: 1em;
    border: 1px solid #ccc;
    border-radius: 1em;
