--- a/src/app/components/proprietari/proprietario-dialog/proprietario-dialog.component.css
+++ b/src/app/components/proprietari/proprietario-dialog/proprietario-dialog.component.css
@@ -1,4 +1,6 @@
 dialog {
+  height: fit-content;
+  overflow:auto;
   border: none;
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
