--- a/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.html
+++ b/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.html
@@ -1,40 +1,46 @@
 <dialog #dialog>
-  <form [formGroup]="propUpdateForm" (ngSubmit)="onSubmit()">
-    <h3 class="text-center">Modifica proprietario</h3>
-    <div>
-      <label for="nome">Nome:</label>
-      <input class="styleInputText" id="nome" type="text" formControlName="nome">
-      <div class="error" *ngIf="!isValid && propUpdateForm.get('nome')?.invalid ">
-        Nome è obbligatorio.
-      </div>
-    </div>
-    <div>
-      <label for="cognome">Cognome:</label>
-      <input class="styleInputText" id="cognome" type="text" formControlName="cognome">
-      <div class="error" *ngIf="!isValid && propUpdateForm.get('cognome')?.invalid">
-        cognome è obbligatorio.
-      </div>
-    </div>
-    <label>Immobili Disponibili:</label>
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="row box ">
-        <div class="col-12">
-          <ng-multiselect-dropdown class="my-custom-multiselect-dropdown"
-                                   [settings]="dropdownSettings"
-                                   [data]="listaImmobiliUnica"
-                                   formControlName="listaImmobiliDTO"
-                                   (onSelect)="onItemSelect($event)"
-                                   (onDeSelect)="onItemDeSelect($event)"
-                                   (onSelectAll)="onSelectAll($event)"
-                                   (onDeSelectAll)="onDeSelectAll($event)">
-          </ng-multiselect-dropdown>
-        </div>
-      </div>
-    </div>
+  <div class="container-fluid d-flex justify-content-center align-items-center ">
+    <div class="row w-100">
+      <div class="col-12 mx-auto  ">
+        <form [formGroup]="propUpdateForm" (ngSubmit)="onSubmit()">
+          <h3 class="text-center">Modifica proprietario</h3>
+          <div>
+            <label for="nome">Nome:</label>
+            <input class="styleInputText" id="nome" type="text" formControlName="nome">
+            <div class="error" *ngIf="!isValid && propUpdateForm.get('nome')?.invalid ">
+              Nome è obbligatorio.
+            </div>
+          </div>
+          <div>
+            <label for="cognome">Cognome:</label>
+            <input class="styleInputText" id="cognome" type="text" formControlName="cognome">
+            <div class="error" *ngIf="!isValid && propUpdateForm.get('cognome')?.invalid">
+              cognome è obbligatorio.
+            </div>
+          </div>
+          <label>Immobili Disponibili:</label>
+          <div class="d-flex justify-content-center align-items-center">
+            <div class="row box ">
+              <div class="col-12">
+                <ng-multiselect-dropdown class="my-custom-multiselect-dropdown"
+                                         [settings]="dropdownSettings"
+                                         [data]="listaImmobiliUnica"
+                                         formControlName="listaImmobiliDTO"
+                                         (onSelect)="onItemSelect($event)"
+                                         (onDeSelect)="onItemDeSelect($event)"
+                                         (onSelectAll)="onSelectAll($event)"
+                                         (onDeSelectAll)="onDeSelectAll($event)">
+                </ng-multiselect-dropdown>
+              </div>
+            </div>
+          </div>
 
-    <div class="d-flex flex-row justify-content-evenly">
-      <button type="submit">Modifica</button>
-      <button type="button" (click)="onClose()">Chiudi</button>
+          <div class="d-flex flex-row justify-content-evenly">
+            <button type="submit">Modifica</button>
+            <button type="button" (click)="onClose()">Chiudi</button>
+          </div>
+        </form>
+      </div>
     </div>
-  </form>
+  </div>
 </dialog>
