--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -6,8 +6,10 @@ header{
 }
 header div{
   height: 90vh;
-  width: 95%;
-  background-image: url('../assets/images/agente-mano-con-casa .jpg');
+  width: 100%;
+  background-image: linear-gradient(-225deg, rgba(0,0,0,0.6) 50%, rgba(0,36,61,0.6) 80%),
+  url('../assets/images/agente-mano-con-casa .jpg');
+
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
