modifice su font

--- a/src/app/components/immobli/immobiliTable/immobili.component.html
+++ b/src/app/components/immobli/immobiliTable/immobili.component.html
@@ -21,7 +21,7 @@
   'mobile-class': isMobile,
   'desktop-class': !isMobile
 }">
-        <table class="table table-bordered  table-hover m-3">
+        <table class="table table-bordered  table-hover  w-auto m-3">
           <thead>
           <tr>
             <th scope="col">azioni</th>
@@ -62,7 +62,7 @@
         </table>
       </div>
       <!--modaledi conferma delete-->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="montserrat-regular modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
