--- a/src/app/components/annessi/annessiTable/annessi.component.html
+++ b/src/app/components/annessi/annessiTable/annessi.component.html
@@ -20,7 +20,7 @@
   'mobile-class': isMobile,
   'desktop-class': !isMobile
 }">
-        <table class="table table-bordered table-hover m-3">
+        <table class="table table-bordered table-hover  w-auto m-3">
           <thead>
           <tr>
             <th scope="col">Azioni</th>
@@ -47,7 +47,7 @@
         </table>
       </div>
       <!-- Modale di conferma delete -->
-      <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="montserrat-regular modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
