--- a/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.css
+++ b/src/app/components/proprietari/proprietario-update-form/proprietario-update-form.component.css
@@ -7,31 +7,7 @@
 
 
 }
-/*dialog {*/
-/*  height:90vh;*/
-/*  position: fixed;*/
-/*  top: 5%;*/
-/*  left: 0;*/
 
-/*  border: 1px solid #ccc;*/
-/*  padding: 1rem;*/
-/*  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);*/
-/*  background-color: white;*/
-/*  z-index: 1000;*/
-/*  display: none;*/
-/*  border-radius: 5px;*/
-/*  opacity: 0; !* Inizialmente nascosto *!*/
-/*  transform: scale(0.7); !* Inizialmente ridotto *!*/
-/*  transition: opacity 0.5s ease, transform 0.5s ease; !* Durata della transizione *!*/
-/*}*/
-
-/*dialog[open] {*/
-/*  display: block;*/
-/*  opacity: 1; !* Visibile quando aperto *!*/
-/*  transform: scale(1); !* Dimensione normale quando aperto *!*/
-/*  transition: opacity 0.5s ease, transform 0.5s ease; !* Durata della transizione *!*/
-/*  overflow:auto ;*/
-/*}*/
 dialog {
   width: 90%; /* Aumenta la larghezza del dialog */
   max-width: 600px; /* Impedisce che diventi troppo largo sui desktop */
@@ -123,7 +99,7 @@ option {
 }
 
 button {
-  padding: 0.7em;
+  padding: 0.7rem;
   color: #fff;
   background-color: #007BFF;
   border: none;
